--- a/demo/basic.html
+++ b/demo/basic.html
@@ -108,7 +108,7 @@
 				}
 			},
 
-			// <button data-actio="removeSelected">
+			// <button data-action="removeSelected">
 			removeSelected: function(event, element, params) {
 				var items = this.element.querySelectorAll("li.selected");
 
